Fixed align issue for mobile

--- a/apps/site/src/components/NavBar/NavBar.module.scss
+++ b/apps/site/src/components/NavBar/NavBar.module.scss
@@ -10,12 +10,12 @@
 	transition: background-color 0.2s ease;
 	background-color: #0f152b;
 	box-shadow: 0px 4px 4px 0px #00000040;
-	height: 68px;
 	padding: 10px 30px;
 	display: flex;
 	align-items: center;
 
 	@include utils.media-breakpoint-up(lg) {
+		height: 68px;
 		backdrop-filter: none;
 	}
 }
@@ -50,7 +50,7 @@
 	font-weight: 400;
 	text-decoration: none;
 	line-height: 7vh;
-	color: #cacaca;
+	color: theme.$off-white;
 
 	@include utils.media-breakpoint-up(lg) {
 		font-size: 1rem;
